ブログ・Twitter・GitHubのリンク追加

--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <body>
         <div class="container">
             <div class="jumbotron">
-                    <h1>MasuCatz</h1>
-                    <p>-forever under construction-</p>
+                <h1>MasuCatz</h1>
+                <p>-forever under construction-</p>
+                <button class="btn btn-primary">
+                    <a href="https://masucatz.hatenablog.com/">Blog</a>
+                </button>
+                <button class="btn btn-primary">
+                    <a href="https://twitter.com/MasuCatz">Twitter</a>
+                </button>
+                <button class="btn btn-primary">
+                    <a href="https://github.com/Maskapara/">GitHub</a>
+                </button>
+            </div>
+            <div class="row">
+                under construction now
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
