--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     <a href="https://twitter.com/MasuCatz">Twitter</a>
                 </button>
                 <button class="btn btn-primary">
+                    <a href="https://mstdn.jp/@MasuCatz">Mastdon</a>
+                </button>
+                <button class="btn btn-primary">
                     <a href="https://github.com/Maskapara/">GitHub</a>
                 </button>
             </div>
