軽微な修正・css追加

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         <title>MasuCatzのページ</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/base.css">
+        <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     </head>
     <body>
         <div class="container">
-            <div class="jumbotron">
+            <div id="sns" class="jumbotron">
                 <h1>MasuCatz</h1>
                 <p>-forever under construction-</p>
+                <h2>exist SNS Platform</h2>
                 <button class="btn btn-primary">
                     <a href="https://masucatz.hatenablog.com/">Blog</a>
                 </button>
@@ -24,6 +27,16 @@
                 <button class="btn btn-primary">
                     <a href="https://github.com/Maskapara/">GitHub</a>
                 </button>
+            </div>
+            <div id="invention">
+                <p>InventionList.</p>
+                <ul>
+                    <li>
+                        <button class="btn btn-primary">
+                            <a href="https://gg-monja.net/">GGmonja</a>
+                        </button>
+                    </li>
+                </ul>
             </div>
             <div class="row">
                 under construction now
