--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charse="utf-8" author="MasuCatz">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="viewport" content="width=width=772, initial-scale=1">
         <title>MasuCatzのページ</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
