--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                     </li>
                 </ul>
             </div>
+            <div id="junkpage">
+                <ul>
+                    <li>
+                        <button class="btn btn-primary">
+                            <a href="./sanmokunarabe/index.html">三目並べ</a>                            
+                        </button>
+                    </li>
+                </ul>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
