Available→Productに文言変更

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </button>
             </div>
             <div class="row">
-                <div class="Available col-md-4">
-                    <h2>Available.</h2>
+                <div class="Product col-md-4">
+                    <h2>Product.</h2>
                     <ul>
                         <li>
                             <button class="btn btn-primary">
