monjaサービス停止の旨、記載

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <ul>
                         <li>
                             <button class="btn btn-primary">
-                                <a href="https://gg-monja.net/">GGmonja</a>
+                                <a href="https://gg-monja.net/">
+                                <s>GGmonja</s>
+                                <br>The Service is not available now.</a>
                             </button>
                         </li>
                     </ul>
