--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
                     <a href="discordapp.com/users/366161159390232578">Discord</a>
                 </button>
                 <button class="btn btn-primary">
-                    <a href="https://github.com/Maskapara/">GitHub</a>
-                </button>
-                <button class="btn btn-primary">
-                    <a href="https://github.com/Maskapara/">GitHub</a>
+                    <a href="https://github.com/MasuCatz/">GitHub</a>
                 </button>
             </div>
             <div class="row">
