fix discord url

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="https://twitter.com/MasuCatz">Twitter</a>
                 </button>
                 <button class="btn btn-primary">
-                    <a href="discordapp.com/users/366161159390232578">Discord</a>
+                    <a href="https://discordapp.com/users/366161159390232578">Discord</a>
                 </button>
                 <button class="btn btn-primary">
                     <a href="https://github.com/MasuCatz/">GitHub</a>
